# poweragent-rs

./: Cargo.toml  README.md
frontend/: README.md
frontend/svelte5/: package-lock.json  package.json
frontend/svelte5/project.inlang/: project_id
frontend/svelte5/src/: app.css
frontend/svelte5/src/routes/demo/paraglide/: +page.svelte
frontend/svelte5/src/routes/workflow/: +page.svelte
frontend/svelte5/src/routes/workflow/editor/: +page.svelte  Flow.svelte  Sidebar.svelte  TextUpdaterNode.svelte
frontend/vue3/: README.md  index.html  package.json  pnpm-lock.yaml  r.bat  vite.config.js
frontend/vue3/src/: main.js
frontend/vue3/src/assets/: base.css  main.css  tools.js
frontend/vue3/src/assets/lang/: en.js  i18n.js  zh.js
frontend/vue3/src/components/workflow/nodes/: CronJobNode.vue  HttpReqNode.vue  LlmNode.vue  OutputNode.vue  ScriptNode.vue
frontend/vue3/src/router/: index.js
frontend/vue3/src/views/: HomeView.vue  LanguageSwitcher.vue
frontend/vue3/src/views/workflow/: Editor.vue
src/: lib.rs  main.rs
src/ai/: client.rs  huggingface.rs  mod.rs
src/db/: mod.rs
src/man/: mod.rs  setting.rs
src/resources/assets/: index.html
src/resources/assets/assets/: DialogFlowAiSDK.min.js  index-CBXDnolR.css  index-HTbpkmSB.js
src/util/: http.rs  mod.rs  result.rs
src/web/: asset.rs  asset.txt  server.rs
src/workflow/: context.rs  dto.rs  editor.rs  mod.rs
